---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 06.12.2023
  Bugfixes:
    - Fix underground pipe approximate length calculation.
    - Fix inconsistent formatting for distances under 1000km.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 06.12.2023
  Features:
    - A better victory screen is displayed upon victory showing more interesting information.