@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 06.12.2023
+  Changes:
+    - Added semi-transparent black backdrop to prevent other GUIs to be clickable, similar to the vanilla victory screen.
   Bugfixes:
     - Fix underground pipe approximate length calculation.
     - Fix inconsistent formatting for distances under 1000km.
